# ajax-kernel

./: .gitattributes  .gitignore  MICROFILM.md  README.md  Start-AjaxDriver.ps1  pyproject.toml
PSEUDOCODE_MAP/: 00_PROVIDER_PREFLIGHT.pseudo.md  00_SYSTEM_FLOW.pseudo.md  01_INTERFACES.pseudo.md  02_ARTIFACTS_AND_STATE.pseudo.md  02_RUN_ARTIFACTS.pseudo.md  03_CONCIERGE_DAILY_BRIEF_HUMAN_DETECTED.pseudo.md  04_MCP_LEANN_STDIO.pseudo.md  05_MICROFILM_LAB_DELTA.pseudo.md  README.md
agency/: __init__.py  actions_catalog.py  actuator.py  agentic_loop.py  ajax_core.py  ajax_heartbeat.py  alt_gui_ops.py  anchor_preflight.py  anti_optimism_guard.py  arbiter.py  auth_manager.py  auth_provider_diagnostics.py  boot_watchdog.py  brain_prompt.py  brain_router.py  bridge_doctor.py  broker.py  ceo_coordinator.py  circuit_breaker.py  close_editor_safe.py  cloud_bench.py  concierge_brief.py  contract.py  contract_enforcer.py  council.py  council_subcall_layer.py  crystallization.py  crystallization_runtime.py  dashboard.py  delta_vision.py  desktop_operation_specs.py  desktop_operator_lab.py  desktop_roles.py  desktop_snap.py  desktop_verify_contract.py  display_manager.py  display_targets.py  driver_keys.py  driver_keys.py.bak_20260109-221317  driver_keys.py.bak_20260110-112514  (+107 more)
ajax/: __init__.py
config/: ajax_actions.json  ajax_admin_policy.json  ajax_voice.json  bindings_policy.json  display_map.json  evolution_policy.json  expected_tasks.json  experiments_registry.yaml  explore_policy.yaml  groq_config.json  groq_routing.yml  hardware_profiles.yaml  hunger_policy.yaml  (+22 more)
(+155 files in other folders)
