[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ajax-kernel"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "requests>=2.25.0",
  "pyyaml>=6.0",
  "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-timeout>=2.0",
]

[tool.setuptools]
packages = ["agency", "ajax", "ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_kernel_*.py"]
addopts = "-q"
